2008-04-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/fuse.h: Fix bug with #ifndef lines.

2008-04-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: New definitions to match the latest rev of the
	chip.
	* include/avr/iox64a1.h: Ditto.

2008-04-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/lock.h: Protect the LOCKMEM and LOCKBITS macros from being
	redefined. Change the documentation accordingly.
	* include/avr/fuse.h: Protect the FUSEMEM and FUSES macros from being
	redefined. Change the documentation accordingly.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sfr_defs.h: Define __SFR_OFFSET value depending on 
	whether an XMEGA device is being used. Use __SFR_OFFSET in _SFR_IO8,
	_SFR_IO16, _SFR_IO_ADDR, _SFR_IO_REG_P macros.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23004.
	* include/avr/wdt.h: Fix Doxygen comment.
	* NEWS: Add to fixed bug list.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn48.h: Fix and protect ADC definition, add ADCW 
	definition.
	* include/avr/iom1284p.h: Add ADCW definition. Protect ADC definition.
	* include/avr/iom328p.h: Ditto.
	* include/avr/iom168p.h: Ditto.
	* include/avr/iom48p.h: Ditto.
	* include/avr/iom32m1.h: Ditto.
	* include/avr/iom32c1.h: Ditto.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/io90pwm2b.h: Ditto.
	* include/avr/iotn167.h: Ditto.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32u4.h: Remove bit definitions for UBRR1L and UBRR1H,
	per Sylvain Guyon, Atmel.

2008-04-26  Anatoly Sokolov <aesok@post.ru>

	* AvrCommon.am: Remove.
	* AvrCommonLibC.am: Remove.	

2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23032.
	* include/avr/iomxx4.h: Add missing PORTxn bit definitions.
	* NEWS: Add to bug list.

2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>
